[package]
name = "pvxs-sys"
version = "0.1.0"
edition = "2021"
authors = ["Tine Zata <https://github.com/TineZata>"]
description = "Low-level FFI bindings for EPICS PVXS library"
license = "MPL-2.0"
repository = "https://github.com/ctrl-sys-ui/pvxs-sys"
keywords = ["epics", "pvxs", "control-system", "ffi", "sys"]
categories = ["external-ffi-bindings", "science"]
readme = "README.md"

# This is a *-sys crate providing low-level FFI bindings
links = "pvxs"

[dependencies]
cxx = "1.0.120"
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["async"]
async = ["tokio", "futures"]

[build-dependencies]
cxx-build = "1.0.189"

[dev-dependencies]
serial_test = "3.0"

[lib]
name = "pvxs_sys"
path = "src/lib.rs"

[package.metadata.docs.rs]
# Environment variables needed for docs.rs builds
rustdoc-args = ["--cfg", "docsrs"]
